// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should LoginPage render correctly Should LoginPage render correctly error 1`] = `
<main
  className="page__main page__main--login "
>
  <div
    className="container page__login-container "
  >
    <section
      className="login"
    >
      <h1
        className="login__title"
      >
        Sign in
      </h1>
      <form
        action="#"
        className="login__form form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            E-mail
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="email"
            placeholder="Email"
            required=""
            type="email"
          />
        </div>
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            Password
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="password"
            placeholder="Password"
            required=""
            type="password"
          />
        </div>
        <button
          className="login__submit form__submit button"
          disabled={false}
          type="submit"
        >
          Sign in
        </button>
        <p
          style={
            Object {
              "color": "#ff0000",
              "fontSize": "12px",
            }
          }
        >
          Error
        </p>
      </form>
    </section>
    <section
      className="locations locations--login locations--current"
    >
      <div
        className="locations__item"
      >
        <a
          className="locations__item-link"
          href="/city/4"
          onClick={[Function]}
        >
          <span>
            Amsterdam
          </span>
        </a>
      </div>
    </section>
  </div>
</main>
`;

exports[`Should LoginPage render correctly Should LoginPage render correctly no auth 1`] = `
<main
  className="page__main page__main--login "
>
  <div
    className="container page__login-container "
  >
    <section
      className="login"
    >
      <h1
        className="login__title"
      >
        Sign in
      </h1>
      <form
        action="#"
        className="login__form form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            E-mail
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="email"
            placeholder="Email"
            required=""
            type="email"
          />
        </div>
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            Password
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="password"
            placeholder="Password"
            required=""
            type="password"
          />
        </div>
        <button
          className="login__submit form__submit button"
          disabled={false}
          type="submit"
        >
          Sign in
        </button>
      </form>
    </section>
    <section
      className="locations locations--login locations--current"
    >
      <div
        className="locations__item"
      >
        <a
          className="locations__item-link"
          href="/city/4"
          onClick={[Function]}
        >
          <span>
            Amsterdam
          </span>
        </a>
      </div>
    </section>
  </div>
</main>
`;

exports[`Should LoginPage render correctly Should LoginPage render correctly responce 1`] = `
<main
  className="page__main page__main--login "
>
  <div
    className="container page__login-container "
  >
    <section
      className="login"
    >
      <h1
        className="login__title"
      >
        Sign in
      </h1>
      <form
        action="#"
        className="login__form form"
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            E-mail
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="email"
            placeholder="Email"
            required=""
            type="email"
          />
        </div>
        <div
          className="login__input-wrapper form__input-wrapper"
        >
          <label
            className="visually-hidden"
          >
            Password
          </label>
          <input
            className="login__input form__input"
            disabled={false}
            name="password"
            placeholder="Password"
            required=""
            type="password"
          />
        </div>
        <button
          className="login__submit form__submit button"
          disabled={false}
          type="submit"
        >
          Sign in
        </button>
      </form>
    </section>
    <section
      className="locations locations--login locations--current"
    >
      <div
        className="locations__item"
      >
        <a
          className="locations__item-link"
          href="/city/4"
          onClick={[Function]}
        >
          <span>
            Amsterdam
          </span>
        </a>
      </div>
    </section>
  </div>
</main>
`;
